--- a/co_occurrance.tex
+++ b/co_occurrance.tex
@@ -32,7 +32,7 @@
 \newtheorem*{theorem*}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem*{lemma*}{Lemma}
-\newtheorem*{conj}{Conjecture}
+\newtheorem{conj}{Conjecture}
 \newtheorem{corollary}{Corollary}
 \newtheorem{clm}{Claim}
 \newtheorem{rmk}{Remark}
@@ -375,6 +375,7 @@ and using Stirling's formula,
 \log(\psi_1) \approx N\left[x \log\left(\frac{p}{x}\right) + (1-x)\log\left(\frac{1-p}{1-x}\right)\right]
 \]
 
+\subsection{Comparing configurations without specifying $\psi$}
 Mayby I don't need to figure out $\psi_{st}$ and $\psi_s$. Maybe I can conclude something like 
 \[
 \frac{P(\b{x})}{P(\b{y})} > 1
@@ -388,6 +389,27 @@ without knowing them. For that, I would need to just identify which cliques chan
 \]
 Then, we are basically asserting the cliques like to either be all there or none there. Which seems good.
 
+Here the algorithm for deciding which of two nodes should be on and which should be off would be:
+\begin{enumerate}[(i)]
+	\item Identify cliques $c_1,...,c_m$ which contain one or both nodes
+	\item compute $\frac{\psi_{c_i}(k^1)}{\psi_{c_i}(k^2)}$ for each  $i \in \{1,...,m\}$, where $k^j$ is the number of members present in configuration $j \in \{1,2\}$, and this fraction is computed according to a simple rule of the kind above.
+	\item multiply these ratios: $\frac{P(\text{configuration 1})}{P(\text{configuration 2})} = \prod_{i=1}^k \frac{\psi_{c_i}(k^1)}{\psi_{c_i}(k^2)}$
+\end{enumerate}
+
+I need to specify that rule. The simplest reasonable thing is probably linear
+\[
+\frac{\psi_c(k+1)}{\psi_c(k)} = \frac{2(1-r_{min})}{n - 1} k + r_{min}
+\]
+but one could imagine some kind of sigmoidal rule as well, so that around $\nicefrac{n}{2}$ this ratio is close to $1$. This makes sense on a $2$ clique, as it implies that
+\[
+\psi(2) > \psi(1) \; \& \; \psi(0) > \psi(1)
+\]
+and in general makes sense for $n$ even. It makes sense for $n$ odd as well. It asserts that it is equally likely to have on $\nicefrac{n}{2} \pm \nicefrac{1}{2}$. Finally, if we need to compare $k$ and $k+2$, we simply take
+\[
+\frac{\psi(k+2)}{\psi(k)} = \frac{\psi(k+2)}{\psi(k+1)}\frac{\psi(k+1)}{\psi(k)}
+\]
+That is, a discrete analogue to the chain rule.
+\subsection{Diffusion based method.}
 Here's an idea inspired by spectral clustering: Solve the diffusion equation on the graph:
 \[
 \frac{\partial}{\partial t} u(v,t) = L u(v,t)
@@ -396,8 +418,50 @@ where $v$ takes values in the vertex set of the graph. Put the initial mass on n
 \[
 U(v) = \int_{0}^{\infty} u(v,t) dt
 \]
-Higher should be more likely. This should tell us something like $P(v|v_{initial})$. I'll need to prove that.
+Higher should be more likely. This should tell us something like $P(v|v_{initial})$. I'll need to prove that. Let's go ahead and formulate the conjecture.
 
+\begin{conj}\label{initalCond}
+Consider a random markov field with configurations in $\{0,1\}^N$. Assume that $P(v_i = 1|v_j = 1) \geq P(v_i = 1)$, with strict inequality if and only if there exists an edge connecting $v_i$ and $v_j$. Consider two configurations $\b{x}$ and $\b{y}$ which differ only in two nodes, so that in $\b{x}$ we have $\b{x}(v_1) = 1$, $\b{x}(v_2) = 0$ and in the other $\b{y}(v_1) = 0$ and $\b{y}(v_2) = 1$.
+
+Let $u_i(t)$ be the solution at node $v_i$ to the discete diffusion problem
+\[
+\frac{d}{dt}\b{u}(t)  = - L\b{u}
+\]
+where $L$ is the  graph laplacian with initial conditions $u_1 = u_2 = 0$ and other nodes initialized to $0$ or $1$ according $\b{x}$ and $\b{y}$, and no-flux boundary conditions. 
+
+Then, 
+\[
+\int_0^{\infty} u_1(t) dt > \int_0^{\infty} u_2(t) dt  \Leftrightarrow  P(\b{x}) > P(\b{y})
+\]
+\end{conj}
+
+or alternatively...
+
+\begin{conj}\label{boundarVal}
+	Consider a random markov field with configurations in $\{0,1\}^N$. Assume that $P(v_i = 1|v_j = 1) \geq P(v_i = 1)$, with strict inequality if and only if there exists an edge connecting $v_i$ and $v_j$. Suppose that $m$ node values are known. Let $u_i(t)$ be the the solution to
+	\[
+	\frac{d}{dt}\b{u}(t) = -L\b{u}
+	\]
+	where $L$ is the graph Laplacian, we have initial conditions $0$ for unknown nodes and known node vales fixed (as a boundary condition). Then,
+	\[
+	\lim_{t\rightarrow \infty} u_i(t) >\lim_{t\rightarrow \infty} u_j(t) \Leftrightarrow P(v_i = 1|\text{ known node values}) > P(v_j = 1 | \text{ known node values})
+	\]
+\end{conj}
+
+We really just need the $\Rightarrow$ direction. It would also be nice to expand to a set of unknown nodes. The natural extension is to specify a known subset and ranking unknown nodes based on the above.
+
+\begin{proof}[proof (\cref{initalCond}).]
+	($\int_0^{\infty} u_1(t) dt > \int_0^{\infty} u_2(t) dt  \Rightarrow  P(\b{x}) > P(\b{y})$). We can show this by showing that 
+	\[
+	\prod_{\{c|v_1 \in c \,\mathit{or}\, v_2 \in c\}}\frac{\psi_c(\b{x})}{\psi_c(\b{y})} >1
+	\]
+\end{proof}
+
+\begin{proof}[proof (\cref{boundarVal}).]
+	We hope to prove this by constructing a dynamical system with the desired property, because it is likely this will be the diffusion equation on the graph. Or maybe not. I don't know....
+	
+	Consider a Baysian network. Seems like it works there.
+\end{proof}
 	
 \bibliographystyle{plain}
 \bibliography{../../summer17}
