--- a/co_occurrance.tex
+++ b/co_occurrance.tex
@@ -17,6 +17,7 @@
 \usepackage{float}
 \usepackage{enumerate}
 \usepackage{tikz}
+\usetikzlibrary{arrows.meta}
 \usepackage[all]{xy}
 \usepackage{url}
 
@@ -90,8 +91,10 @@
 \renewcommand{\b}{\bm}
 
 \definecolor{dgreen}{RGB}{49,128,23}
+\definecolor{lgreen}{RGB}{77, 255, 166}
 \definecolor{nicepink}{RGB}{255, 0, 102}
 \definecolor{nicered}{RGB}{255, 80, 80}
+\definecolor{lblue}{RGB}{102, 163, 255}
 
 \newcommand{\bE}{\mathbb{E}}
 \newcommand{\bP}{\mathbb{P}}
@@ -492,6 +495,175 @@ where $\tilde{x} = x$ for all nodes except $v_1$ and $v_2$, while $x(v_1) = \til
 \end{equation}
 where $c$ are maximal cliques of the RMF.
 
+We can regard the initial value problem version as the Kolmogorov forward equation of a jump process that transitions from taxa to taxa which have an edge between them at a linear rate (see \cref{kfor}). This inspires one last version of this idea, similar to the forced idea, which is to use the forward equations for a jump process with inflow and outflow at known on and off nodes, respectively. However, that would be a lot more complicated because of the infinite state space. The forward equations would not be closed. We could deal directly with that model, I suppose, but that doesn't seem worth it.
+
+
+\begin{figure}
+	\begin{subfigure}[b]{0.5\linewidth}
+			\begin{center}
+			\begin{tikzpicture}[scale = 4]
+			\node (a) at (0,1) [circle, fill = nicepink] {$T_1$};
+			\node (b) at (0.8,1.2) [circle, fill = nicepink] {$T_2$};
+			\node (c) at (1.4,0.5) [circle, fill = nicepink] {$T_3$};
+			\draw (b) edge (c);
+			\draw (a) edge (b);
+			\end{tikzpicture}
+		\end{center}
+		\caption{A small network example}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.5\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 4]
+				\draw[->] (0,0)--(0,1);
+				\draw[->] (0,0)--(0.8,-0.4);
+				\draw[->] (0,0)--(-0.8,-0.4);
+				\fill (0,0.7) circle (1 pt);
+				\fill (0.5,-0.25) circle (1 pt);
+				\fill (-0.5,-0.25) circle (1 pt);
+				\draw[{Latex[length=4mm]}-{Latex[length=4mm]}] (0,0.7) -- (0.5,-0.25);
+				\draw[{Latex[length=4mm]}-{Latex[length=4mm]}] (0.5,-0.25) -- (-0.5,-0.25);
+				\end{tikzpicture}
+		\end{center}
+	\caption{State transition graph for the IVP}
+\end{subfigure}
+\caption{Diffusion is equivalent to the Kolmogorov forward equations for the above system.}\label{kfor}
+\end{figure}
+
+I suppose I need to ask the question of whether or not the boundary value version will always have an equilibrium. That is a question about the kernel of $L$. A ``boundary value" set on the graph is a set of fixed node values (probably $1,0,-1$). Clearly, this defines an affine subspace, the span of the standard basis vectors in the unknown dimensions plus the specified point (putting $0$ in the unknown dimensions). This doesn't have to intersect the kernel of $L$ (which always includes $\b{1}$). If it doesn't, there is not an equilibrium solution to the diffusion problem which gives those values at boundary nodes. However, this doesn't mean the boundary value problem (or, more precisely, the equvalent forced problem on the unknown subset) doesn't have an equilibrium solution. Take for example a complete graph on three nodes. If we prescribe one node as $1$ and one as $0$, the reduced problem is
+\[
+\frac{d}{dt} u = -2u + 1
+\]
+which has an equilibrium at $u = \nhalf$. This is not an equilirium to the entire problem, because in that case
+\[
+-L\begin{pmatrix}
+1 \\ \nhalf \\ 0
+\end{pmatrix} = \begin{pmatrix}
+-2 & 1 & 1\\ 1 & -2 & 1 \\ 1 & 1 & -2
+\end{pmatrix}\begin{pmatrix}
+1 \\ \nhalf \\ 0
+\end{pmatrix} = \begin{pmatrix}
+-\nicefrac{3}{2} \\ 0 \\ \nicefrac{3}{2}
+\end{pmatrix}
+\]
+The nullity of $L$ is the number of connected components of the graph. Removing a column from a matrix doesn't lower the rank of that matrix if the column was a linear combination of some others, which is the case precisely when the columns is the first one removed that corresponds to a connected component of the graph. Therefore, as long as we specify at least one ``boundary value" from each connected component, the restricted matrix is non-singular and there exists a unique equilibrium to the boundary value problem.
+
+The boundary value problem can be interpreted as the forward equations for the same process as the IVP, but with a "walker" added to the known ``on" nodes whenever one leaves, and any walker who enters a known ``off" node is removed from the problem. The result is not a probability distribution, but it can be scaled to be one.
+
+\subsubsection{Tests of these methods}
+I tested these three ideas on two small (unweighted) graphs, shown in \cref{tests}.
+
+\begin{figure}
+		\begin{subfigure}[b]{0.33\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 2]
+			\node (a) at (1,2) [circle, fill = lgreen] {$1$};
+			\node (b) at (1.4,1.2) [circle, fill = lblue] {$2$};
+			\node (c) at (0,1) [circle, fill = lgreen] {$3$};
+			\node (d) at (0.4,0) [circle, fill = lblue] {$4$};
+			\draw (b) edge (c);
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (b) edge (c);
+			\draw (c) edge (d);
+			\end{tikzpicture}
+		\end{center}
+		\caption{One tested configuration}
+	\end{subfigure}
+		\begin{subfigure}[b]{0.33\linewidth}
+	\begin{center}
+		\begin{tikzpicture}[scale = 2]
+		\node (a) at (1,2) [circle, fill = nicered] {$1$};
+		\node (b) at (1.4,1.2) [circle, fill = lblue] {$2$};
+		\node (c) at (0,1) [circle, fill = lgreen] {$3$};
+		\node (d) at (0.4,0) [circle, fill = lblue] {$4$};
+		\draw (b) edge (c);
+		\draw (a) edge (b);
+		\draw (a) edge (c);
+		\draw (b) edge (c);
+		\draw (c) edge (d);
+		\end{tikzpicture}
+	\end{center}
+	\caption{One tested configuration}
+\end{subfigure}
+	\begin{subfigure}[b]{0.33\linewidth}
+		\begin{center}
+			\begin{tikzpicture}[scale = 2]
+			\node (a) at (1,2.3) [circle, fill = lgreen] {$1$};
+			\node (b) at (0,0) [circle, fill = lgreen] {$2$};
+			\node (c) at (-0.4,0.9) [circle, fill = lgreen] {$3$};
+			\node (d) at (-0.1,1.7) [circle, fill = lblue] {$4$};
+			\node (e) at (1,-0.1) [circle, fill = lblue] {$5$};
+			\node (f) at (1.5,1.5) [circle, fill = lblue] {$6$};
+			\node (g) at (1.3,0.3)[circle, fill = nicered] {$7$};
+			\draw (a) edge (b);
+			\draw (a) edge (c);
+			\draw (a) edge (d);
+			\draw (b) edge (c);
+			\draw (b) edge (d);
+			\draw (c) edge (d);
+			\draw (d) edge (f);
+			\draw (f) edge (g);
+			\draw (e) edge (g);
+			\draw (c) edge (e);
+			\draw (b) edge (e);
+			\end{tikzpicture}
+		\end{center}
+		\caption{One tested configuration}
+	\end{subfigure}
+	\caption{Test networks. Blue nodes were ``unknown", red nodes ``off", and green ``on".}\label{tests}
+\end{figure}
+
+\begin{table}
+	\begin{center}
+\begin{tabular}{|l|l|l|l|}
+	\hline Configuration & Method & Ranking & Ties\\
+	\hline
+	\cref{tests}(a) &  IVP & 2, 4 & none  \\ \cline{2-4}
+	 & BVP & 4, 2 & 4, 2 \\ \cline{2-4}
+	 & Forcing & 2, 4 & none \\
+	\hline
+		\cref{tests}(b) &  IVP & 4, 2 & 4, 2 \\ \cline{2-4}
+	& BVP &4, 2 & none  \\ \cline{2-4}
+	& Forcing &4, 2 & none\\
+	\hline
+		\cref{tests}(c) &  IVP & 4, 5, 6& none \\ \cline{2-4}
+	& BVP & 4, 5, 6&  none\\ \cline{2-4}
+	& Forcing &  4, 5, 6& none \\
+	\hline
+\end{tabular}
+\end{center}
+\caption{Results of ranking nodes by liklihood of being ``on" by the three above methods}\label{rankres}
+\end{table}
+	
+\section{Comparison of Networks}
+At some point here, I'm going to want to compare networks. Luckily, there's things to do. There are of course the simple and obvious: size, radius, various connectivity and clustering metrics. There are also more interesting things, like the random walk kernel on graphs. Graph kernels are similar to an inner product on two graphs.
+
+A graph kernel $k(G_1,G_2)$ must be symmetric and positive definite (an inner product must also be bilinear) \cite{Vishwanathan}. To compute the most common type (random walk kernels) we need to define the direct product of two graphs $G$ and $G'$. That is the graph $G_{\times}$ with vertices 
+\[
+(v_i,v_j') \in V \times V'
+\]
+and edges
+\[
+(v_i,v_j') \sim (v_k,v_l') \Leftrightarrow v_i \sim v_k \, \&\, v_j' \sim v_l'
+\]
+We can compute the adjacency matrix of this by computing the Kronecker product of the adjacency matrices of $G$ and $G'$. The Kronecker product of matrices $A$ and $B$ is
+\[
+A \otimes B = \begin{pmatrix}
+a_{11} B & a_{12}B & \cdots & a_{1m}B\\
+a_{21}B & \ddots & &\\
+\vdots & & & \\
+a_{n1}B & & & a_{nm}B
+\end{pmatrix}
+\]
+A random walk on this graph is isomorphic to a random walk on either graph, and so one can consider a random walk on this graph as a simultaneous random walk on both. We can take the adjacency matrices normalized so row sums are 1, call those $A$, $A'$, and then
+\[
+W_{\times}  = A \otimes A'
+\] 
+This gives a stochastic matrix $W_{\times}$. Given distributions $p$ and $p'$, define $p_{\times}  = p \otimes p'$. Define the kernel
+\[
+k(G,G') = \sum_{k=0}^{\infty} \mu(k) q_{\times}^T W_{\times}^k p_{\times}
+\]
+where $q,q'$ are stopping probabilities, and $p,p'$ are initial distributions. This counts all the common random walks. The coefficients $\mu(k)$ serve two purposes. One is to make sure the sum is finite. The other allows one to tune the kernel to emphasize walks of certain lengths. I think it's called geometric if $\mu(k) = c^k$. However, this seems like it will overemphasize short walks, of which there will be many in common.
 
 	
 \bibliographystyle{plain}
